--- a/web3-frontend/package.json
+++ b/web3-frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-icons":"^3.11.0",
     "react-spinners": "^0.11.0",
     "typescript": "^3.9.7",
     "web-vitals": "^2.1.4",
